# accessibility-agent

./: .env.example  .gitignore  OLLAMA_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_components.py  test_ollama.py
.claude/: CLAUDE.md  DOCS_TEMPLATE.md  PLAN.md  README.md  REVIEW_NOTES.md  TECH.md  WIKI.md  settings.local.json
config/: settings.yaml
docs/: OLLAMA_SETUP.md
src/: main.py
src/agent/: __init__.py  accessibility_agent.py  decision_engine.py  memory.py
src/automation/: browser_launcher.py  keyboard_controller.py
src/correlation/: __init__.py  action_logger.py  correlator.py  formatter.py  models.py
src/navigation/: __init__.py  interaction_strategies.py  navigator.py
src/reporting/: __init__.py  html_generator.py
src/reporting/templates/: report.html.jinja2
src/screen_reader/: nvda_log_format.md  nvda_parser.py  output_monitor.py
src/utils/: config.py  logger.py
src/wcag/: __init__.py  criteria_mapper.py  issue_detector.py  validator.py
tests/: conftest.py
tests/unit/: test_action_logger.py  test_browser_launcher.py  test_correlation_models.py  test_correlator.py  test_criteria_mapper.py  test_decision_engine.py  test_formatter.py  test_html_generator.py  test_interaction_strategies.py  test_keyboard_controller.py  test_memory.py  test_navigator.py  test_nvda_parser.py  test_output_monitor.py  test_validator.py
